name:                rcon
version:             0.0.0.1
synopsis:            Implementation of the rcon protocol
-- description:
homepage:            https://github.com/ion1/rcon-haskell
license:             ISC
license-file:        COPYING
author:              Johan Kiviniemi
maintainer:          devel@johan.kiviniemi.name
-- copyright:
category:            Network
build-type:          Simple
cabal-version:       >= 1.8

library
  exposed-modules:     Network.Rcon,
                       Network.Rcon.Client
  other-modules:       Network.Rcon.Parse,
                       Network.Rcon.Serialize,
                       Network.Rcon.Types
  build-depends:       attoparsec,
                       base == 4.*,
                       bytestring,
                       cereal,
                       network,
                       stm,
                       time
  ghc-options:         -Werror -Wall
  cc-options:          -Werror -Wall -Wextra

executable rcon-client
  main-is:             ClientMain.hs
  build-depends:       attoparsec,
                       base,
                       bytestring,
                       cereal,
                       network,
                       stm,
                       time,
                       unix
  ghc-options:         -Werror -Wall
  cc-options:          -Werror -Wall -Wextra

test-suite test-rcon
  type:                exitcode-stdio-1.0
  main-is:             RunTests.hs
  build-depends:       attoparsec,
                       base,
                       bytestring,
                       cereal,
                       network,
                       QuickCheck,
                       network,
                       test-framework,
                       test-framework-quickcheck2,
                       time
  ghc-options:         -Werror -Wall
  cc-options:          -Werror -Wall -Wextra

source-repository head
  type:                git
  location:            git://github.com/ion1/rcon-haskell.git

-- vim:set et sw=2 sts=2:
